Site,Sector, Block

--- a/HMGreenCityMLM/HMGreenCityMLM/HMGreenCityMLM.csproj
+++ b/HMGreenCityMLM/HMGreenCityMLM/HMGreenCityMLM.csproj
@@ -815,6 +815,12 @@
     </Content>
     <Content Include="scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\_ViewStart.cshtml" />
+    <Content Include="Views\Master\SiteMaster.cshtml" />
+    <Content Include="Views\Master\SiteMasterList.cshtml" />
+    <Content Include="Views\Master\SectorMaster.cshtml" />
+    <Content Include="Views\Master\SectorList.cshtml" />
+    <Content Include="Views\Master\BlockMaster.cshtml" />
+    <Content Include="Views\Master\BlockList.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
