changes in tree and logo changes

--- a/HMGreenCityMLM/HMGreenCityMLM/HMGreenCityMLM.csproj
+++ b/HMGreenCityMLM/HMGreenCityMLM/HMGreenCityMLM.csproj
@@ -511,6 +511,7 @@
     <Content Include="images\dhara-logo.png" />
     <Content Include="images\edit-icon.png" />
     <Content Include="images\exel.png" />
+    <Content Include="images\hmlogo.png" />
     <Content Include="images\loader.gif" />
     <Content Include="images\lock.png" />
     <Content Include="images\logo.png" />
