Add Distribute Payment Password

--- a/HMGreenCityMLM/HMGreenCityMLM/HMGreenCityMLM.csproj
+++ b/HMGreenCityMLM/HMGreenCityMLM/HMGreenCityMLM.csproj
@@ -830,6 +830,7 @@
     <Content Include="Views\Master\NoticeMasterList.cshtml" />
     <Content Include="Views\AdminReports\AssociateLoginLog.cshtml" />
     <Content Include="Views\AdminProfile\AssociateListByNew.cshtml" />
+    <Content Include="Views\Transactions\DistributePaymentPassword.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
