--- a/HMGreenCityMLM/HMGreenCityMLM/HMGreenCityMLM.csproj
+++ b/HMGreenCityMLM/HMGreenCityMLM/HMGreenCityMLM.csproj
@@ -501,8 +501,6 @@
     <Content Include="Datatablecss\datatables\cdn.datatables.net\buttons\1.2.2\js\buttons.html5.min.js" />
     <Content Include="Datatablecss\datatables\cdn.datatables.net\buttons\1.2.2\js\buttons.print.min.js" />
     <Content Include="Datatablecss\datatables\cdn.datatables.net\buttons\1.2.2\js\dataTables.buttons.min.js" />
-    <Content Include="Datatablecss\datatables\cdn.rawgit.com\bpampuch\pdfmake\0.1.18\build\pdfmake.min.js" />
-    <Content Include="Datatablecss\datatables\cdn.rawgit.com\bpampuch\pdfmake\0.1.18\build\vfs_fonts.js" />
     <Content Include="Datatablecss\datatables\cdnjs.cloudflare.com\ajax\libs\jszip\2.5.0\jszip.min.js" />
     <Content Include="Datatablecss\datatables\datatables-init.js" />
     <Content Include="Datatablecss\datatables\datatables.min.js" />
@@ -843,6 +841,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Datatablecss\datatables\cdn.rawgit.com\bpampuch\pdfmake\0.1.18\build\" />
     <Folder Include="KYCDocuments\" />
     <Folder Include="ProductRewardImages\" />
     <Folder Include="RequestImage\" />
