Emplotee registration and details changes and add change passwprd for employyee on admin side

--- a/HMGreenCityMLM/HMGreenCityMLM/HMGreenCityMLM.csproj
+++ b/HMGreenCityMLM/HMGreenCityMLM/HMGreenCityMLM.csproj
@@ -833,6 +833,7 @@
     <Content Include="Views\AdminProfile\AssociateListByNew.cshtml" />
     <Content Include="Views\Transactions\DistributePaymentPassword.cshtml" />
     <Content Include="Views\AdminReports\DateWiseBusinessReport.cshtml" />
+    <Content Include="Views\EmployeeRegistration\EmployeeChangePassword.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
