--- a/HMGreenCityMLM/HMGreenCityMLM/Web.config
+++ b/HMGreenCityMLM/HMGreenCityMLM/Web.config
@@ -13,7 +13,8 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
-    <httpRuntime targetFramework="4.5.2"/>
+
+    <httpRuntime targetFramework="4.5.2" maxUrlLength="2097151" maxQueryStringLength="2097151" />
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers"/>
@@ -22,7 +23,7 @@
         <add namespace="System.Web.Mvc.Html"/>
         <add namespace="System.Web.Routing"/>
         <add namespace="System.Web.WebPages"/>
-      </namespaces>     
+      </namespaces>
     </pages>
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web"/>
