--- a/HMGreenCityMLM/HMGreenCityMLM/HMGreenCityMLM.csproj
+++ b/HMGreenCityMLM/HMGreenCityMLM/HMGreenCityMLM.csproj
@@ -837,6 +837,8 @@
     <Content Include="Views\AdminReports\DateWiseBusinessReport.cshtml" />
     <Content Include="Views\EmployeeRegistration\EmployeeChangePassword.cshtml" />
     <Content Include="Views\Admin\PayoutLedger.cshtml" />
+    <Content Include="Views\Permission\SetmainId.cshtml" />
+    <Content Include="Views\Admin\EmpBinaryTree.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
