--- a/HMGreenCityMLM/HMGreenCityMLM/Web.config
+++ b/HMGreenCityMLM/HMGreenCityMLM/Web.config
@@ -13,7 +13,7 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
-
+    <customErrors mode="Off"/>
     <httpRuntime targetFramework="4.5.2" maxUrlLength="2097151" maxQueryStringLength="2097151" />
     <pages>
       <namespaces>
@@ -72,6 +72,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs"
