--- a/HMGreenCityMLM/HMGreenCityMLM/HMGreenCityMLM.csproj
+++ b/HMGreenCityMLM/HMGreenCityMLM/HMGreenCityMLM.csproj
@@ -538,9 +538,11 @@
     <Content Include="images\TreeIcon\default.png" />
     <Content Include="images\TreeIcon\girl-active.png" />
     <Content Include="images\TreeIcon\girl-block.png" />
+    <Content Include="images\TreeIcon\girl-hold.png" />
     <Content Include="images\TreeIcon\girl-inactive.png" />
     <Content Include="images\TreeIcon\men-active.png" />
     <Content Include="images\TreeIcon\men-block.png" />
+    <Content Include="images\TreeIcon\men-hold.png" />
     <Content Include="images\TreeIcon\men-inactive.png" />
     <Content Include="images\user.png" />
     <Content Include="images\view.png" />
