--- a/HMGreenCityMLM/HMGreenCityMLM/HMGreenCityMLM.csproj
+++ b/HMGreenCityMLM/HMGreenCityMLM/HMGreenCityMLM.csproj
@@ -607,6 +607,7 @@
     <Content Include="AssociatePanelcss\Fonts\feather.ttf" />
     <Content Include="AssociatePanelcss\Fonts\feather.woff" />
     <Content Include="WebsiteCss\KohinoorCity.jpeg" />
+    <Content Include="WebsiteCss\KohinoorCity1.jpeg" />
     <Content Include="WebsiteCss\Offer.jpeg" />
     <None Include="Properties\PublishProfiles\HMGreenCityMLM.pubxml" />
     <None Include="scripts\jquery-1.10.2.intellisense.js" />
