--- a/HMGreenCityMLM/HMGreenCityMLM/HMGreenCityMLM.csproj
+++ b/HMGreenCityMLM/HMGreenCityMLM/HMGreenCityMLM.csproj
@@ -847,6 +847,10 @@
     <Content Include="Views\AdminReports\DefaultAssociateList.cshtml" />
     <Content Include="Views\AdminReports\GetBusinessStatus.cshtml" />
     <Content Include="Views\AdminReports\RewardIncludedList.cshtml" />
+    <Content Include="Views\Master\SiteMasterListFromCrm.cshtml" />
+    <Content Include="Views\Master\SectorListFromCrm.cshtml" />
+    <Content Include="Views\Master\BlockListFromCrm.cshtml" />
+    <Content Include="Views\Master\PlotListfromCRM.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
