--- a/HMGreenCityMLM/HMGreenCityMLM.csproj
+++ b/HMGreenCityMLM/HMGreenCityMLM.csproj
@@ -6523,6 +6523,7 @@
     <Content Include="Views\AdminReports\TopupReportNew.cshtml" />
     <Content Include="Views\User\TopupListNew.cshtml" />
     <Content Include="Views\AdminReports\RewardIncludedListNew.cshtml" />
+    <Content Include="Views\AdminReports\BusinessReportNew.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
