--- a/HMGreenCityMLM/HMGreenCityMLM.csproj
+++ b/HMGreenCityMLM/HMGreenCityMLM.csproj
@@ -6450,6 +6450,7 @@
     <Compile Include="Controllers\UserReportsController.cs" />
     <Compile Include="Controllers\WalletController.cs" />
     <Compile Include="Controllers\WebAPIController.cs" />
+    <Compile Include="Controllers\WebsiteController.cs" />
     <Compile Include="Filters\SimpleAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -6488,6 +6489,7 @@
       <DependentUpon>AgentServices.asmx</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Models\Website.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -6524,6 +6526,9 @@
     <Content Include="Views\User\TopupListNew.cshtml" />
     <Content Include="Views\AdminReports\RewardIncludedListNew.cshtml" />
     <Content Include="Views\AdminReports\BusinessReportNew.cshtml" />
+    <Content Include="Views\Website\UpdateRankforJob.cshtml" />
+    <Content Include="Views\Website\UpdateHoldStatusforJob.cshtml" />
+    <Content Include="Views\Website\UpdateCounterHoldActiveforJob.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
