--- a/HMGreenCityMLM/HMGreenCityMLM.csproj
+++ b/HMGreenCityMLM/HMGreenCityMLM.csproj
@@ -6533,6 +6533,7 @@
     <Content Include="Views\User\ConfirmRegistrationForDown.cshtml" />
     <Content Include="Views\User\DownlineRankAchieverReports.cshtml" />
     <Content Include="Views\User\DownlineRankAchieverAssociateReports.cshtml" />
+    <Content Include="Views\Downline\UpdateProfile.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
